# AdventOfCode2024

./: .gitignore  CMakeLists.txt
Day 1/: CMakeLists.txt  part1.cpp  part2.cpp
Day 2/: part1.cpp  part2.cpp
Day 3/: part1.cpp  part2.cpp
Day 4/: part1.cpp  part2.cpp
Day 5/: part2.cpp
Day 6/: part1.cpp
Day 7/: part1.cpp  part2.cpp
Day 8/: part1.cpp
Day 9/: part1.cpp
