cmake_minimum_required(VERSION 3.27)
project(AdventOfCode2024)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day1_Part1
        "Day 1/part1.cpp")

add_executable(Day1_Part2
        "Day 1/part2.cpp")

add_executable(Day2_Part1
        "Day 2/part1.cpp")

add_executable(Day2_Part2
        "Day 2/part2.cpp")
