cmake_minimum_required(VERSION 3.27)
project(AdventOfCode2024)

set(CMAKE_CXX_STANDARD 20)

add_executable(Day1_Part1
        "Day 1/part1.cpp")

add_executable(Day1_Part2
        "Day 1/part2.cpp")

add_executable(Day2_Part1
        "Day 2/part1.cpp")

add_executable(Day2_Part2
        "Day 2/part2.cpp")

add_executable(Day3_Part1
        "Day 3/part1.cpp")
add_executable(Day3_Part2
        "Day 3/part2.cpp")

add_executable(Day4_Part1
        "Day 4/part1.cpp")
add_executable(Day4_Part2
        "Day 4/part2.cpp")
